--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Backend_Node_js/NPM/* 
 Backend_Node_js/1st_Express/node_modules/*
 Backend_Node_js/Mongoos_prac/node_modules/*
+Backend_Node_js/Mongoos_prac/package-lock.json 
+Backend_Node_js/Mongoos_prac/package.json 
