--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ Backend_Node_js/1st_Express/node_modules/*
 Backend_Node_js/Mongoos_prac/node_modules/*
 Backend_Node_js/Mongoos_prac/package-lock.json 
 Backend_Node_js/Mongoos_prac/package.json 
-Backend_Node_js/Connect_to_DB/node_modules/* 
+Backend_Node_js/Connect_to_DB/node_modules/
+Backend_Node_js/Connect_to_DB/node_modules/*
 Backend_Node_js/Connect_to_DB/package-lock.json 
 Backend_Node_js/Connect_to_DB/package.json 
 package.json 
