--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Backend_Node_js/Connect_to_DB/package-lock.json
 Backend_Node_js/Connect_to_DB/package.json 
 package.json 
 package-lock.json 
+Backend_Node_js/1st_Express/package-lock.json 
+Backend_Node_js/1st_Express/package.json 
