--- a/Backend_Node_js/1st_Express/package.json
+++ b/Backend_Node_js/1st_Express/package.json
@@ -9,7 +9,9 @@
   "author": "r4ghuveer",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "pug": "^3.0.2"
   }
 }
