adding .gitignore for react

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Backend_Node_js/Connect_to_DB/package-lock.json
 Backend_Node_js/Connect_to_DB/package.json 
 package.json 
 package-lock.json 
-React/*
+React/my-app/node_modules
 Electron/node_modules
 Electron/package-lock.json
 
