--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,12 @@ Backend_Node_js/Mongoos_prac/package-lock.json
 Backend_Node_js/Mongoos_prac/package.json 
 Backend_Node_js/Connect_to_DB/node_modules/
 Backend_Node_js/Connect_to_DB/node_modules/*
+Backend_Node_js/Express_assignment/node_modules/
+Backend_Node_js/Express_assignment/node_modules/*
 Backend_Node_js/Connect_to_DB/package-lock.json 
 Backend_Node_js/Connect_to_DB/package.json 
+Backend_Node_js/Express_assignment/package-lock.json 
+Backend_Node_js/Express_assignment/package.json 
 package.json 
 package-lock.json 
 React/my-app/node_modules
