--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ Backend_Node_js/Connect_to_DB/package-lock.json
 Backend_Node_js/Connect_to_DB/package.json 
 Backend_Node_js/Express_assignment/package-lock.json 
 Backend_Node_js/Express_assignment/package.json 
+Backend_Node_js/Product_app/package-lock.json 
+Backend_Node_js/Product_app/package.json 
 package.json 
 package-lock.json 
 React/my-app/node_modules
